# askrevenue

./: .env.example  .gitignore  DEPLOY.md  Makefile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
api/: Procfile  README.md  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: e41c191f0d87_baseline_schema.py
api/app/: __init__.py  answer.py  charts.py  config.py  dateutil_shim.py  db.py  examples.py  executor.py  llm.py  main.py  models.py  safety.py  schema_def.py  schemas.py  seed.py
api/app/routers/: ask.py  query.py  saved.py
api/tests/: test_answer_fallback.py  test_charts.py  test_executor.py  test_safety.py
infra/db-init/: 01-readonly-role.sql
scripts/: local-pg.sh
web/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/(app)/ask/: page.tsx
web/app/(app)/dashboard/: page.tsx
web/app/(app)/schema/: page.tsx
web/components/: AppShell.tsx  ChartCard.tsx  ChartView.tsx  DataTable.tsx  SqlBlock.tsx  icons.tsx  ui.tsx
web/lib/: api.ts  format.ts  types.ts
